# mect_1ano

./: .gitignore
AAD/: a1_cuda.md  a1_tips.md
AAD/P/aula01/: MandelbrotCount
AAD/P/aula02/: lock_and_unlock  producer_consumer
AAD/Projetos/aad_proj1/: Data.xlsx  cpu_utilities.h  deti_coin_example.txt  deti_coins.c  deti_coins_cpu_avx2_search.h  deti_coins_cpu_avx_search.h  deti_coins_cpu_avx_search_client.h  deti_coins_cpu_avx_search_opencl.h  deti_coins_cpu_avx_search_server.h  deti_coins_cpu_search.h  deti_coins_cpu_special_search.h  deti_coins_cuda_kernel_search.cu  deti_coins_cuda_search.h  deti_coins_vault.txt  deti_coins_web_assembly.h  makefile  md5_cpu.h  md5_cpu_avx.h  md5_cpu_avx2.h  md5_cuda_kernel.cu  search_utilities.h
AAD/Projetos/aad_proj2/: README.md
AAD/Projetos/proj1/: cuda_driver_api_utilities.h  deti_coins.c  deti_coins_cpu_search.h  deti_coins_vault.h  makefile  md5.h  md5_cpu_neon.h  md5_cuda.h  md5_test_data.h  test_vault.bash
AAD/Prática/guiao01/: MandelbrotCount.py  install.bash
AAD/Prática/guiao02/: create_and_join
AAD/Prática/guiao04/: client  client_parallelization  makefile  parallelization.c  server  server_clients.c  server_parallelization
AAD/Prática/guiao05/: MandelbrotCount.c  MandelbrotCount_MPI  hello  hello_world_mpi.c  makefile  one_to_all  one_to_all_communication_mpi.c  one_to_one  one_to_one_communication_mpi.c
AAD/Prática/guiao06&07/: cuda_driver_api_util.h  hello.cu  hello_cuda_driver_api.c  hello_cuda_driver_api.cu  hello_open_cl.c  hello_open_cl.cl  makefile  median_filter_cuda.cu
AAD/Prática/guiao10/: adder_n.vhd  (+7 more)
ASE/Projeto/: README.md
ASE/Prática/: Readme.txt
ASE/Teórica/: exame_2024.docx  resumos.docx
CLE/Projeto/cle_proj2/mpi-implementations/word-count/: CMakeLists.txt
CLE/Projeto/cle_proj2/mpi-implementations/word-count/books/: 15674.txt  16633.txt  17177.txt  19375.txt  20042.txt  21287.txt  22044.txt  22634.txt  22647.txt  22648.txt  24339.txt  24619.txt  24657.txt  24833.txt  24847.txt  24853.txt  25479.txt  25697.txt  27350.txt  27390.txt  27599.txt  28122.txt  29342.txt  29997.txt  30068.txt  30355.txt  30456.txt  30461.txt  30543.txt  30945.txt  31654.txt  32380.txt  33245.txt  33749.txt  45840.txt  53101.txt  61936.txt  63145.txt  63438.txt
CLE/Projetos/cle_proj2/mpi-implementations/weather-stations/: CMakeLists.txt
CLE/Projetos/cle_proj2/mpi-implementations/weather-stations/src/: main.cpp
CLE/Prática/guiao03/mpi-basic/: CMakeLists.txt
CLE/Prática/guiao03/mpi-basic/src/: sendRecData.cpp
CLE/Teórica/: testes_exemplo.docx
CM/Prática/: CM_Work4_Lab3_5G_support_p2.pptx
EGS/Exames/: exame_2024.docx  exames_passados.docx
EGS/Teórica/: diving-into-docker.tar.bz2
IC/P/: grupos.xlsx
SRC/Projeto/: sampleScript.py
SRC/Prática/: Firewalls_VyOS_Guide_SRC_cmds.txt
(+1050 files in other folders)
